--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiKdL2XS0PLN7cI4X5MdXn5c_uVaYvHU4&libraries=places"></script>
   </body>
 </html>
