--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-control" content="public">
-    <title>mybnbApp</title>
+    <title>MybnbApp</title>
   </head>
   <body>
     <div id="root"></div>
