--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-control" content="prived">
+    <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
     <title>MybnbApp</title>
   </head>
   <body>
